# coresense_instrumentation

./: README.md
.github/workflows/: main.yaml
coresense_instrumentation/: CHANGELOG.rst  CMakeLists.txt  package.xml
coresense_instrumentation_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
coresense_instrumentation_driver/config/: params.yaml
coresense_instrumentation_driver/include/coresense_instrumentation_driver/: CoresenseInstrumentationDriver.hpp  InstrumentationConsumer.hpp  InstrumentationLifecycleNode.hpp  InstrumentationProducer.hpp
coresense_instrumentation_driver/include/coresense_instrumentation_driver/instrumentation_utils/: ICell.hpp  InstrumentationLifecycleNode.hpp  InstrumentationNode.hpp
coresense_instrumentation_driver/launch/: coresense_instrumentation_driver.launch.py
coresense_instrumentation_driver/src/: coresense_instrumentation_driver_node.cpp
coresense_instrumentation_driver/src/coresense_instrumentation_driver/: CoresenseInstrumentationDriver.cpp  InstrumentationConsumerGeneric.cpp  InstrumentationGeneric.cpp  InstrumentationImage.cpp  InstrumentationLifecycleNode.cpp  InstrumentationProducerGeneric.cpp  InstrumentationProducerImage.cpp
coresense_instrumentation_driver/test/: CMakeLists.txt  test_coresense_instrumentation_driver.cpp
coresense_instrumentation_interfaces/: CMakeLists.txt  package.xml
coresense_instrumentation_interfaces/msg/: NodeInfo.msg
coresense_instrumentation_interfaces/srv/: DeletePublisher.srv
coresense_instrumentation_rviz/: CMakeLists.txt  package.xml  plugins_description.xml
coresense_instrumentation_rviz/config/: coresense_instrumentation.rviz
coresense_instrumentation_rviz/include/coresense_instrumentation_rviz/: CoresenseInstrumentationPanel.hpp
coresense_instrumentation_rviz/launch/: coresense_intrsumentation_rviz.launch.py
coresense_instrumentation_rviz/src/: CoresenseInstrumentationPanel.cpp
