<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coresense_instrumentation</name>
  <version>0.1.0</version>
  <description>Coresense Instrumentation</description>
  <maintainer email="jc.manzanares.serrano@gmail.com">Juan Carlos Manzanares Serrano</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>coresense_instrumentation_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>